# ga-selection-methods-benchmark

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_basic_benchmarks.py  run_bipolarity_sweep.py  run_cec2017_bound_benchmarks.py  run_diversity_figures.py  run_engineering_problems.py
scripts/: install_debian.sh  setup_venv.sh  smoke_test.py
src/bmt_repro/: __init__.py  benchmarks.py  cec2017_suite.py  diversity.py  engineering.py  experiment_workers.py  ga.py  parallel.py  runtime.py  selection.py  stats.py  utils.py
